syntax = "proto3";
option go_package = "github.com/WadeCappa/consensus/pkg/go/kvstore/v1;kvstorepb";

package kvstore;

service kvstore {
  rpc Put (PutRequest) returns (PutResponse) {}
  rpc Get (GetRequest) returns (GetResponse) {}
}

message PutRequest {
  uint64 version = 1;
  string key = 2;
  bytes data = 3;
}

message PutResponse {}

message GetRequest {
  string key = 1;
}

message GetResponse {
  uint64 version = 1;
  bytes data = 2;
}
